--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script type="text/javascript" src="js/game.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
     <script type="text/javascript" src="js/ball.js"></script>
+    <script type="text/javascript" src="js/marcador.js"></script>
 
 
 </head>
