--- a/index.html
+++ b/index.html
@@ -8,11 +8,6 @@
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <script type="text/javascript" src="js/player.js"></script>
-    <script type="text/javascript" src="js/game.js"></script>
-    <script type="text/javascript" src="js/index.js"></script>
-    <script type="text/javascript" src="js/ball.js"></script>
-    <script type="text/javascript" src="js/marcador.js"></script>
 
 
 </head>
@@ -24,6 +19,15 @@
     </div>
 
     <canvas id="canvas" width="900" height="561"></canvas>
+
+
+
+    <script type="text/javascript" src="js/player.js"></script>
+    <script type="text/javascript" src="js/game.js"></script>
+    <script type="text/javascript" src="js/index.js"></script>
+    <script type="text/javascript" src="js/ball.js"></script>
+    <script type="text/javascript" src="js/collisionChecker.js"></script>
+    <script type="text/javascript" src="js/marcador.js"></script>
 
 </body>
 
