--- a/index.html
+++ b/index.html
@@ -23,11 +23,13 @@
 
 
     <script type="text/javascript" src="js/player.js"></script>
-    <script type="text/javascript" src="js/collisionChecker.js"></script>
-    <script type="text/javascript" src="js/game.js"></script>
-    <script type="text/javascript" src="js/index.js"></script>
     <script type="text/javascript" src="js/ball.js"></script>
     <script type="text/javascript" src="js/marcador.js"></script>
+    <script type="text/javascript" src="js/collisionChecker.js"></script>
+    <script type="text/javascript" src="js/keyboardManager.js"></script>
+    <script type="text/javascript" src="js/game.js"></script>
+    <script type="text/javascript" src="js/index.js"></script>
+
 
 </body>
 
