--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
     <canvas id="canvas" width="900" height="561"></canvas>
 
 
-
+    <script type="text/javascript" src="js/drawElements.js"></script>
     <script type="text/javascript" src="js/player.js"></script>
-
     <script type="text/javascript" src="js/ball.js"></script>
     <script type="text/javascript" src="js/marcador.js"></script>
     <script type="text/javascript" src="js/collisionChecker.js"></script>
     <script type="text/javascript" src="js/resetGame.js"></script>
     <script type="text/javascript" src="js/keyboardManager.js"></script>
+
     <script type="text/javascript" src="js/game.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
 
