Empezar juego por medio del botón

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div>
 
         <h1>PONG</h1>
-        <button type="start-button" class="btn btn-danger">Start</button>
+        <button type="start-button" id="start-button" class="btn btn-danger">Start</button>
     </div>
 
     <canvas id="canvas" width="900" height="561"></canvas>
